proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport-proxy
  namespace: vassyutovich
spec:
  selector:
    app: teleport-proxy
  ports:
    - name: ssh
      port: 3023
      targetPort: 3023
      protocol: TCP
    - name: web-ssh
      port: 3080
      targetPort: 3080
      protocol: TCP
    - name: tunnel
      port: 3024
      targetPort: 3024
      protocol: TCP
  type: ClusterIP
